[project]
name = "unitslib"
version = "0.1.0"
description = ""
authors = [
  { name = "DanPeled", email = "98838880+DanPeled@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.poetry]
packages = [{ include = "unitslib", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
