[tool.poetry]
name = "unitslib"
version = "0.1.0"
description = ""
authors = ["DanPeled <98838880+DanPeled@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "unitslib", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
